Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14623

Output of show function code does not show FETCH GROUP NEXT ROW for custom aggregates

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.3(EOL)
    • 10.3.7
    • Stored routines
    • None
    • 10.3.6-1

    Description

      create aggregate function f1(x INT) returns double
      begin
      declare z double default 0;
      declare continue handler for not found return z;
      loop
      fetch group next row;
      set z = z + x;
      end loop;
      end|
      

      show function code f1;
      Pos	Instruction
      0	set z@1 0
      1	hpush_jump 3 2 CONTINUE
      2	freturn double z@1
      3	
      4	set z@1 z@1 + x@0
      5	jump 3
      6	hpop 1
      
      

      Attachments

        Activity

          People

            varun Varun Gupta (Inactive)
            varun Varun Gupta (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5d
                0.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.