MDEV-14623: Output of show function code does not show FETCH GROUP NEXT ROW for custom aggregates

The print() function was missing from the FETCH GROUP NEXT ROW instrunction class, so there was no
output for this particular instruction when we use the query SHOW FUNCTION CODE function_name